--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -341,6 +341,105 @@
             <setting name="Search_stockroom_Reason" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="mainForms_mainTB_note" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_hardware_note" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mainForms_stockroom_note" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_mainTB_note" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_hardware_note" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Search_stockroom_note" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="setDataBase_mainTB_note" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="changeFormTwo_mainTB_note" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_ID" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_date" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_InvNum" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_LanName" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_ResName" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_Room" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_Floor" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_TypeDiv" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_SN" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_Model" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_WrittenOff" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_JiraTask" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_hardware_Note" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_ID" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_date" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_InvNum" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_Quantity" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_TypeDiv" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_SN" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_Model" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_WrittenOff" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_JiraTask" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_Reason" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ChangeFormTwo_stockroom_Note" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
 </configuration>
