--- a/WindowsFormsApplication/WORK_DB_INVENTORY.csproj
+++ b/WindowsFormsApplication/WORK_DB_INVENTORY.csproj
@@ -140,6 +140,12 @@
     <Compile Include="changeFormTwo.Designer.cs">
       <DependentUpon>changeFormTwo.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChangeHardWare.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangeHardWare.Designer.cs">
+      <DependentUpon>ChangeHardWare.cs</DependentUpon>
+    </Compile>
     <Compile Include="DAL_SEARCH.cs" />
     <Compile Include="DAL_SET_Buttons.cs" />
     <Compile Include="Delete.cs">
@@ -233,6 +239,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="changeFormTwo.resx">
       <DependentUpon>changeFormTwo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChangeHardWare.resx">
+      <DependentUpon>ChangeHardWare.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Delete.resx">
       <DependentUpon>Delete.cs</DependentUpon>
@@ -360,6 +369,7 @@
     <None Include="Resources\LOG2.old.BMP" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Pencil_64px.png" />
     <None Include="Resources\Horizontal Line_48px.png" />
     <None Include="Resources\Card Exchange_48px.png" />
     <Content Include="Resources\if_mail-letter-offer_2931172.png" />
