New kod, fix bug

--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -29,7 +29,7 @@
             <setting name="int_navigation" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="inr_barcod" serializeAs="String">
+            <setting name="int_barcod" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="mainForms_mainTB_date" serializeAs="String">
@@ -438,6 +438,12 @@
                 <value>False</value>
             </setting>
             <setting name="ChangeFormTwo_stockroom_Note" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="print_img" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="prin_labe_HW_PC" serializeAs="String">
                 <value>False</value>
             </setting>
         </WindowsFormsApplication.Properties.Settings>
