--- a/WindowsFormsApplication/App.config
+++ b/WindowsFormsApplication/App.config
@@ -446,6 +446,12 @@
             <setting name="prin_labe_HW_PC" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="room" serializeAs="String">
+                <value>404 серверная,522 Серверная,519 TV Серверная</value>
+            </setting>
+            <setting name="namefile" serializeAs="String">
+                <value>codeworks_inv</value>
+            </setting>
         </WindowsFormsApplication.Properties.Settings>
     </userSettings>
 </configuration>
